# my_os

./: Cargo.toml  Makefile  README.md  fat12.img
src/: carriage.rs  cpu.rs  fat16.rs  fat32.rs  fonts.rs  framebuffer.rs  fs.rs  gdt.rs  gui.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  mouse.rs  multitasking.rs  network.rs  pci.rs  std.rs  tdg.rs  time.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  multiboot_header.asm
usr/programs/print_a/: Cargo.toml  Makefile
usr/programs/print_a/.cargo/: confing.toml
usr/programs/print_a/src/: main.rs
usr/programs/print_b/: Cargo.toml  Makefile
usr/programs/print_b/src/: main.rs
usr/programs/somnia/: Cargo.toml  Makefile
usr/programs/somnia/src/: lib.rs  main.rs
usr/programs/test_program/: Cargo.toml  Makefile
usr/programs/test_program/src/: lib.rs  main.rs
usr/somnia/: Cargo.toml  Makefile
usr/somnia/src/: main.rs
usr/somnia/src/std/: io.rs  mem.rs  mod.rs  multitasking.rs  syscall.rs  time.rs
usr/std/: io.rs  mem.rs  mod.rs  multitasking.rs  syscall.rs
usr/test_program/: Cargo.toml  Makefile
usr/test_program/src/: main.rs  multitasking.rs  std.rs
usr/test_program/src/std/: sysalloc.rs
