[package]
name = "my_os"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
rlibc = "1.0"
multiboot2 = "0.22.0"
bitflags = "0.9.1"
x86 = "0.52.0"
xmas-elf = "0.9.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] 

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]


[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[patch.crates-io]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", branch = "master", features = ["mem"], default-features = false }

[build-dependencies]
compiler_builtins = {  git = "https://github.com/rust-lang/compiler-builtins", branch = "master", features = ["mem"], default-features = false }

