[package]
name = "somnia"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "somnia"
path = "src/main.rs"

[dependencies]
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] 

[build-dependencies]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[profile.release]
opt-level = 1
lto = false
#codegen-units = 1
panic = "abort"
